aion: arm64/dts: Support edge suppression feature for 2nd ft3681
- Support edge suppression feature for 2nd ft3681.
- Enable edge suppression feature.

Change-Id: Id9d1de86c921026de912fb028c89a99223e593bd
Signed-off-by: Jun Weng <wengjun1@motorola.com>
Reviewed-on: https://gerrit.mot.com/2511060
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Zhihong Kang <kangzh@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/aion-touch.dtsi
+++ b/arch/arm64/boot/dts/mediatek/aion-touch.dtsi
@@ -74,6 +74,7 @@
 		pinctrl-1 = <&ctp_gt9896s_int_suspend &ctp_gt9896s_reset_suspend>;
 		pinctrl-2 = <&ctp_gpio_release>;
 		mmi,status = "/chosen","mmi,panel_name","contains","csot_vtdr6115";
+		focaltech,edge-ctrl;
 		mmi,power-off-suspend;
     };
 };
