--- a/arch/arm64/boot/dts/mediatek/aion-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/aion-charger.dtsi
@@ -376,6 +376,9 @@
 	mmi,wls_control_en = <&pio 114 0x0>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&mmi_control_wls_default>;
+	#cooling-cells = <2>;
+	mmi,wlc-rx-mitigation = <(-1) 2500000 2000000 1500000 1200000
+							1000000 800000 500000>;
 };
 
 &extcon_usb {
