--- a/arch/arm64/boot/dts/mediatek/aion-touch.dtsi
+++ b/arch/arm64/boot/dts/mediatek/aion-touch.dtsi
@@ -75,7 +75,9 @@
 		pinctrl-2 = <&ctp_gpio_release>;
 		mmi,status = "/chosen","mmi,panel_name","contains","csot_vtdr6115";
 		focaltech,edge-ctrl;
+		mmi,enable-gestures;
 		mmi,power-off-suspend;
+		mmi,supported_gesture_type = <0x07>;
     };
 };
 
