--- a/arch/arm64/boot/dts/mediatek/mt6879-aion-evb-overlay.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6879-aion-evb-overlay.dts
@@ -15,6 +15,10 @@
 
 #include "mediatek/mt6879-aion-common-overlay.dtsi"
 
+&sx937x {
+	Semtech,button-flag = <0x1f>;
+};
+
 /* Board match root node */
 / {
 	fragment@model {
