aion: arm64/dts: Enable increasing idle scan rate for gt9916
- Add  sample sysfs node, touch feature of increasing game idle
scan rate will r/w it.

Change-Id: I114da6a3e5032ae33e8e189a848f4815aa395f14
Signed-off-by: Jun Weng <wengjun1@motorola.com>
Reviewed-on: https://gerrit.mot.com/2517323
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Zhihong Kang <kangzh@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/aion-touch.dtsi
+++ b/arch/arm64/boot/dts/mediatek/aion-touch.dtsi
@@ -47,6 +47,7 @@
 		goodix,panel-max-w = <256>;
 		goodix,panel-max-p = <256>;
 		goodix,edge-ctrl;
+		goodix,sample-ctrl;
 		goodix,interpolation-ctrl;
 		mmi,enable-gestures;
 		mmi,power-off-suspend;
