--- a/arch/arm64/boot/dts/mediatek/aion-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/aion-charger.dtsi
@@ -174,6 +174,11 @@
 		io-channel-names = "bat_temp", "vref";
 
 		uirbat_pull_up_r_full = <24000>;/*24k*/
+
+		latest_fw_version = [01 02 08 52 32];
+		df_serialnum = "SB18D74000";
+		latest_batt_param_version = <0x0001>;
+
 	};
 
 	bq25960_master:bq25960-master@66 {
