--- a/arch/arm64/boot/dts/mediatek/aion-touch.dtsi
+++ b/arch/arm64/boot/dts/mediatek/aion-touch.dtsi
@@ -53,7 +53,7 @@
 		mmi,power-off-suspend;
 		mmi,usb-charger-detection;
 		mmi,supported_gesture_type = <0x07>;
-		mmi,charger-psy-name = "battery";
+		mtk-charger = <&mt6375_chg>;
 	};
 
 	focaltech@1 {
@@ -78,6 +78,8 @@
 		focaltech,edge-ctrl;
 		mmi,enable-gestures;
 		mmi,supported_gesture_type = <0x07>;
+		mmi,usb-charger-detection;
+		mtk-charger = <&mt6375_chg>;
     };
 };
 
