arm64/dt: aion: change nfc i2c speed
The default i2c speed is 100k and change it as 400k
to speed up Nfc FW download.

Change-Id: I920be8f7bb941eeff18cdd073517cc7ccb0fac08
Signed-off-by: wuwl10 <wuwl10@mt.com>
Reviewed-on: https://gerrit.mot.com/2524324
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Zhihong Kang <kangzh@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6879-aion-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6879-aion-common-overlay.dtsi
@@ -112,6 +112,7 @@
 
 &i2c3 {
 	status = "okay";
+	clock-frequency = <400000>;
 	st21nfc: st21nfc@08 {
 		compatible = "mediatek,nfc";
 		reg = <0x08>;
