arm64/dts: manaus: baseline set up
details:
modify the front camera gpio & name & ldo

Change-Id: I57c6d98a668fb07244e1bb98d5eabb3f8fb52fe7
Signed-off-by: chenlj26 <chenlj26@motorola.com>
Reviewed-on: https://gerrit.mot.com/2526349
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: <wangzl37@motorola.com>
Reviewed-by: <yangmf3@motorola.com>
Reviewed-by: Long Cheng <chengl1@motorola.com>
Reviewed-by: Zhichao Chen <chenzc2@motorola.com>
Reviewed-by: Zhuoran Xu <xuzr3@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/manaus-wl2864c.dtsi
+++ b/arch/arm64/boot/dts/mediatek/manaus-wl2864c.dtsi
@@ -6,8 +6,7 @@
 		status = "ok";
 		compatible = "wl2864c";
 		reg = <0x29>;
-		//enable_gpio = <&pio 103 0x0>;
-                vin2-supply = <&bob_buck>;
+		enable_gpio = <&pio 103 0x0>;
 		semi,cs-gpios = <&pio 168 0x0>;
 		regulator_nb = "ldo1", "ldo2",
 				"ldo3", "ldo4",
@@ -37,7 +36,7 @@
 				regulator-min-microvolt = <1200000>;
 				regulator-max-microvolt = <4387500>;
 			};
-			cam_fm_afvdd_ldo: ldo5 {
+			cam_fm_avdd_ldo: ldo5 {
 				regulator-name = "wl2864c-ldo5";
 				regulator-min-microvolt = <2800000>;
 				regulator-max-microvolt = <2800000>;
