--- a/arch/arm64/boot/dts/mediatek/aion-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/aion-charger.dtsi
@@ -226,7 +226,7 @@
 
 	min_charger_voltage = <4600000>;
 	pd_vbus_low_bound = <5000000>;
-	pd_vbus_upper_bound = <5000000>;
+	pd_vbus_upper_bound = <9000000>;
 	vsys_watt = <5000000>;
 	ibus_err = <14>;
 
@@ -359,9 +359,9 @@
 	pd-data {
 		/* 5V, 900ma */
 		pd,source-pdo-data = <0x0001905a>;
-		/* 5V, 3A */
+		/* 5V, 3A  9V, 2A*/
 		pd,sink-pdo-size = <2>;
-		pd,sink-pdo-data = <0x0001912c 0x0001912c> ;
+		pd,sink-pdo-data = <0x0001912c 0x0002d0c8> ;
 	};
 };
 
