--- a/arch/arm64/boot/dts/mediatek/devonn-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonn-charger.dtsi
@@ -178,6 +178,8 @@
 &lk_charger {
 	/*boot voltage*/
 	boot_battery_voltage = <3560000>;
+	/*boot voltage when using AC charger*/
+	ac_charger_boot_battery_voltage = <3400000>;
 
 	/* LCD brightness*/
 	led_brightness = <1023>;
