pd: config pd2 sink pdo 9V2A and 9V3A
As some PD adaptor don't have 9V2A and some don't have 9V3A,
so both config 9V2A and 9V3A to compatible with more chargers.

Change-Id: Ib38d689a6a475c4a28ff5aa169451219baeaa3bd
Signed-off-by: Haijian Ma <mahj8@motorola.com>
Reviewed-on: https://gerrit.mot.com/2534204
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Lu Chai <chailu1@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/aion-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/aion-charger.dtsi
@@ -359,9 +359,9 @@
 	pd-data {
 		/* 5V, 900ma */
 		pd,source-pdo-data = <0x0001905a>;
-		/* 5V, 3A  9V, 2A*/
-		pd,sink-pdo-size = <2>;
-		pd,sink-pdo-data = <0x0001912c 0x0002d0c8> ;
+		/* 5V, 3A  9V, 2A  9V, 3A*/
+		pd,sink-pdo-size = <3>;
+		pd,sink-pdo-data = <0x0001912c 0x0002d0c8 0x0002d12c> ;
 	};
 };
 
