--- a/arch/arm64/boot/dts/mediatek/mt6879-manaus-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6879-manaus-common-overlay.dtsi
@@ -112,6 +112,7 @@
 
 &i2c3 {
 	status = "okay";
+	clock-frequency = <400000>;
 	st21nfc: st21nfc@08 {
 		compatible = "mediatek,nfc";
 		reg = <0x08>;
