--- a/arch/arm64/boot/dts/mediatek/manaus-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/manaus-charger.dtsi
@@ -46,6 +46,7 @@
 };
 
 &charger {
+	gauge = <&smart_battery>;
 	battery_cv = <4500000>;
 	max_charger_voltage = <14500000>;
 	ac_charger_current = <3000000>;
@@ -103,6 +104,11 @@
 		mmi,adc-channel-pa = <1>;
 		mmi,adc-channel-batid = <3>;
 		mmi,adc-channel-vbat = <100>;
+};
+
+&smart_battery {
+		compatible = "mmi,smart-battery";
+		status = "okay";
 };
 
 &pio {
@@ -168,6 +174,11 @@
 		io-channel-names = "bat_temp", "vref";
 
 		uirbat_pull_up_r_full = <24000>;/*24k*/
+
+		latest_fw_version = [01 02 08 52 32];
+		df_serialnum = "SB18D74000";
+		latest_batt_param_version = <0x0001>;
+
 	};
 
 	bq25960_master:bq25960-master@66 {
@@ -211,11 +222,11 @@
 
 &pdc {
 	compatible = "mediatek,charger,pd";
-	gauge = <&NFG1000>;
+	gauge = <&smart_battery>;
 
 	min_charger_voltage = <4600000>;
 	pd_vbus_low_bound = <5000000>;
-	pd_vbus_upper_bound = <5000000>;
+	pd_vbus_upper_bound = <9000000>;
 	vsys_watt = <5000000>;
 	ibus_err = <14>;
 
@@ -236,9 +247,17 @@
 	vbat_threshold = <4150>;
 };
 
+&pe {
+	gauge = <&smart_battery>;
+};
+
+&pe4 {
+	gauge = <&smart_battery>;
+};
+
 &pe2 {
 	compatible = "mediatek,charger,pe2";
-	gauge = <&NFG1000>;
+	gauge = <&smart_battery>;
 
 	/* PE 2.0 */
 	pe20_ichg_level_threshold = <1000000>; /* uA */
@@ -266,7 +285,7 @@
 
 &pe5 {
 		compatible = "mediatek,charger,pe5";
-		gauge = <&NFG1000>;
+		gauge = <&smart_battery>;
 		polling_interval = <10000>;
 		ta_cv_ss_repeat_tmin = <25>;
 		vbat_cv = <4530>;
@@ -319,7 +338,7 @@
 		mmi_therm_vol_thres = <80>;
 		mmi_therm_step = <3>;
 		mmi_max_ibat = <12200>;
-		mmi_max_hrst_cnt = <2>;
+		mmi_max_hrst_cnt = <0>;
 };
 
 &i2c0 {
@@ -340,9 +359,9 @@
 	pd-data {
 		/* 5V, 900ma */
 		pd,source-pdo-data = <0x0001905a>;
-		/* 5V, 3A */
-		pd,sink-pdo-size = <2>;
-		pd,sink-pdo-data = <0x0001912c 0x0001912c> ;
+		/* 5V, 3A  9V, 2A  9V, 3A*/
+		pd,sink-pdo-size = <3>;
+		pd,sink-pdo-data = <0x0001912c 0x0002d0c8 0x0002d12c> ;
 	};
 };
 
@@ -364,12 +383,12 @@
 
 &charger_cooler {
 	mmi,thermal-mitigation = <(-1) 8000000 6000000 4000000 3000000
-				1000000 500000 200000 100000>;
+				2000000 1000000 500000 300000>;
 };
 
 &moto_wlc {
 	compatible = "moto,charger,wlc";
-	gauge = <&NFG1000>;
+	gauge = <&smart_battery>;
 	min_charger_voltage = <4600000>;
 	wlc_max_charger_current = <3150000>;
 	wlc_max_input_current = <1150000>;
