manaus/sensor: aw963xx driver bringup
  1.add dts about awinic
  2.mt6879-moto-common-overlay.dtsi

Change-Id: If95Montana61f4047875934c02e653d929eb63fc567d
Signed-off-by: weimh1@motorola.com <weimh1@motorola.com>
Reviewed-on: https://gerrit.mot.com/2537112
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Hujun Liao <liaohj@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6879-moto-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6879-moto-common-overlay.dtsi
@@ -735,6 +735,29 @@
 
 		status = "okay";
 	};
+
+	awinic_sar:awinic_sar@12 {
+			/* common node */
+			compatible = "awinic,aw_sar";
+			reg = < 0x12 >;
+			sar-num = < 0 >;
+			pinctrl-names = "default","sleep";
+			pinctrl-0 = <&sar_int_default>;
+			pinctrl-1 = <&sar_int_sleep>;
+			interrupt-parent = <&pio>;
+			interrupts = <119 0x02>;
+			interrupt-names = "awinic_irq";
+			irq-gpio = <&pio 119 0x02>;
+			//vcc1-supply = <&mt6363_vio18>;
+			channel_use_flag = <0x1f>;
+			aw_sar,use_plug_cail;
+			aw_sar,update_fw;
+			aw_sar,using_pm_ops;
+			/* private node belongs to aw963xx */
+			start-mode = < 1 >; // 0: start in rom  1: start in ram
+			irq-mux = < 2 >; // set csx as irq pin. config this field when connect to aw96308/aw96310
+			status = "okay";
+	};
 };
 
 /* CONNSYS TCXO GPIO start */
