manaus: Bring up front eeprom[2/3]
Details:
  Config manaus's dtsi, add front eeprom config

Change-Id: Iee89d3843d4532e3d9097ec1a63234f65caeb00c
Signed-off-by: Simon C <chenzm8@motorola.com>
Reviewed-on: https://gerrit.mot.com/2538099
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: <chenlj26@motorola.com>
Reviewed-by: <huqian4@motorola.com>
Reviewed-by: Long Cheng <chengl1@motorola.com>
Reviewed-by: Zhichao Chen <chenzc2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/cust_mt6879_camera_v4l2_manaus.dtsi
+++ b/arch/arm64/boot/dts/mediatek/cust_mt6879_camera_v4l2_manaus.dtsi
@@ -340,6 +340,11 @@
 	#address-cells = <1>;
 	#size-cells = <0>;
 	//FRONT
+	mtk_camera_eeprom1:camera_eeprom1@50 {
+		compatible = "mediatek,camera_eeprom";
+		reg = <0x50>;
+		status = "okay";
+	};
 
 	sensor1: sensor1@20 {
 		compatible = "mediatek,imgsensor";
