aion: arm64/dts: Support game idle scan rate feature for ft3681
- Support for game idle scan rate feature, keep 1500hz scanning
frequency for 10 seconds when entering idle in game mode.

Change-Id: I15e39fc2cd2cda40737285ad1c4e6fd4174144af
Signed-off-by: Jun Weng <wengjun1@motorola.com>
Reviewed-on: https://gerrit.mot.com/2538705
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Hujun Liao <liaohj@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/aion-touch.dtsi
+++ b/arch/arm64/boot/dts/mediatek/aion-touch.dtsi
@@ -76,6 +76,7 @@
 		pinctrl-2 = <&ctp_gpio_release>;
 		mmi,status = "/chosen","mmi,panel_name","contains","csot_vtdr6115";
 		focaltech,edge-ctrl;
+		focaltech,sample-ctrl;
 		focaltech,interpolation-ctrl;
 		mmi,enable-gestures;
 		mmi,supported_gesture_type = <0x07>;
