--- a/drivers/gpu/drm/panel/Kconfig
+++ b/drivers/gpu/drm/panel/Kconfig
@@ -943,6 +943,16 @@ config DRM_PANEL_CSOT_VTDR6115_655_FHDP_DPHY_VDO_144HZ
 	  resolution and uses 30-bits RGB per pixel. It provides a
 	  MIPI DSI interface to host.
 
+config DRM_PANEL_TM_NT36672C_650_FHDP_DPHY_VDO_120HZ
+	tristate "TM 1080*2400 120 HZ VDO nt36672c panel"
+	depends on OF
+	depends on DRM_MIPI_DSI
+	depends on BACKLIGHT_CLASS_DEVICE
+	help
+	  Say Y here if you want to enable support for TM_NT36672C_650_FHDP_DPHY_VDO_120HZ
+	  panel. It provides a MIPI DSI interface to host.
+
+
 config DRM_MEDIATEK_PANEL
 	tristate "drm panel common driver"
 	depends on OF
