--- a/drivers/gpu/drm/panel/Makefile
+++ b/drivers/gpu/drm/panel/Makefile
@@ -95,6 +95,7 @@ obj-$(CONFIG_DRM_PANEL_MOT_DUMMY_VDO_60HZ) += dsi-panel-mot-dummy-vdo-60hz.o
 obj-$(CONFIG_DRM_PANEL_TIANMA_ICNL9922_649_FHDP_DPHY_VDO_120HZ) += dsi-panel-mot-tianma-icnl9922-649-fhdp-dphy-vdo-120hz.o
 obj-$(CONFIG_DRM_PANEL_TONGXINGDA_FT8726_FHDP_DPHY_VDO_120HZ) += dsi-panel-mot-tongxingda-ft8726-fhdp-dphy-vdo-120hz.o
 obj-$(CONFIG_DRM_PANEL_CSOT_FT8726_FHDP_DPHY_VDO_120HZ) += dsi-panel-mot-csot-ft8726-fhdp-dphy-vdo-120hz.o
+obj-$(CONFIG_DRM_PANEL_TM_NT36672C_650_FHDP_DPHY_VDO_120HZ) += dsi-panel-mot-tm-nt36672c-650-fhdp-dphy-vdo-120hz.o
 obj-$(CONFIG_DRM_PANEL_TIANMA_NT36672C_649_FHDP_DPHY_VDO_120HZ) += dsi-panel-mot-tianma-nt36672c-649-fhdp-dphy-vdo-120hz.o
 obj-$(CONFIG_DRM_PANEL_TIANMA_VTDR6115_655_FHDP_DPHY_VDO_144HZ) += dsi-panel-mot-tianma-vtdr6115-655-fhdp-dphy-vdo-144hz.o
 obj-$(CONFIG_DRM_PANEL_CSOT_VTDR6115_655_FHDP_DPHY_VDO_144HZ) += dsi-panel-mot-csot-vtdr6115-655-fhdp-dphy-vdo-144hz.o
