aion: system: memory: Optimize ssmr memory
Optimize ssmr memory reserved size,
To reduce CMA reserved memory thus enlarge avaiable memory.

Change-Id: Icf878cc14526adda6d0aa9513429a11b92ae0ea3
Signed-off-by: Cao Bo<caobo3@motorola.com>
Reviewed-on: https://gerrit.mot.com/2545291
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Hongshu Lou <louhs1@motorola.com>
Reviewed-by: Zhongsheng Xia <xiazs1@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6879-aion-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6879-aion-common-overlay.dtsi
@@ -16,6 +16,7 @@
 #include "mediatek/aion-sensor.dtsi"
 #include "mediatek/aion-wl2864c.dtsi"
 #include "mediatek/aion-charger.dtsi"
+#include "mediatek/aion-memory.dtsi"
 
 /*Remove unused i2c device*/
 &rt6160 {
