arm64/dt: manaus: config nfc device tree
Config nfc device tree.
Manaus use NXP nfc PN560, SN220E, SN220P

Change-Id: I8cd7f38962a42509e86e9f550b3956d9a33a73eb
Signed-off-by: wuwl10 <wuwl10@mt.com>
Reviewed-on: https://gerrit.mot.com/2545315
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6879-manaus-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6879-manaus-common-overlay.dtsi
@@ -83,21 +83,47 @@
 &i2c3 {
 	status = "okay";
 	clock-frequency = <400000>;
-	st21nfc: st21nfc@08 {
-		compatible = "mediatek,nfc";
-		reg = <0x08>;
+	nfc_pn5xx: nfc_pn5xx@28 {
+		compatible = "qcom,sn-nci";
+		reg = <0x28>;
+		interrupt-parent = <&pio>;
+		interrupts = <19 IRQ_TYPE_LEVEL_HIGH 1 0>;
+		qcom,sn-irq = <&pio 19 0>;
+		qcom,sn-ven = <&pio 13 0>;
 		status = "okay";
 	};
 };
 
-&soc {
-	nfc {
-		compatible = "mediatek,nfc-gpio-v2";
-		gpio-rst = <13>;
-		gpio-rst-std = <&pio 13 0x0>;
-		gpio-irq = <19>;
-		gpio-irq-std = <&pio 19 0x0>;
+&spi5 {
+	p61: p61@0 {
+		compatible = "nxp,p61";
+		reg = <0>;
+		spi-max-frequency = <20000000>;
+		nxp,nfcc = "3-0028";
+//		nxp,p61-rst = <&gpio2 5 0>;
+		pinctrl-names = "pinctrl_state_mode_spi",
+				"pinctrl_state_mode_idle";
+		pinctrl-0 = <&pinctrl_state_mode_spi>;
+		pinctrl-1 = <&pinctrl_state_mode_idle>;
 		status = "okay";
+	};
+};
+&pio {
+	pinctrl_state_mode_spi: pinctrl_state_mode_spi {
+		pins_cmd_dat {
+			pinmux = <PINMUX_GPIO79__FUNC_SPI5_CLK>,
+				 <PINMUX_GPIO80__FUNC_SPI5_CSB>,
+				 <PINMUX_GPIO81__FUNC_SPI5_MO>,
+				 <PINMUX_GPIO82__FUNC_SPI5_MI>;
+			drive-strength = <2>;
+		};
+	};
+	pinctrl_state_mode_idle: pinctrl_state_mode_idle {
+		pins_cmd_dat {
+			pinmux = <PINMUX_GPIO80__FUNC_GPIO80>;
+			slew-rate = <1>;
+			output-high;
+		};
 	};
 };
 
