--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -2060,3 +2060,15 @@ config FAKE_ASYM32_CPU
 	  the capability to run 32bit user space program.
 	  This feature should not be enabled in MP project. If you don't know,
 	  say N.
+
+config AW_RAMPING_SUPPORT
+	bool "aw dual smart pa ramping"
+	default n
+	help
+	Enable it only for dual smart pa.
+
+config DUMMY_SND_CARD_SUPPORT
+	bool "no smart pa,dummy snd card"
+	default n
+	help
+	Enable it only for not smart pa on board.
