--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-aion.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-aion.config
@@ -48,6 +48,8 @@ CONFIG_MTK_VIDEO_AW36518=m
 CONFIG_CUSTOM_KERNEL_IMGSENSOR="mot_aion_ov50a_mipi_raw mot_aion_ov50e_mipi_raw mot_aion_s5kgd2_mipi_raw mot_aion_hi1336_mipi_raw"
 # CONFIG_RT4831A_I2C is not set
 CONFIG_SND_SMARTPA_AW882XX=y
+CONFIG_AW_RAMPING_SUPPORT=y
+CONFIG_DUMMY_SND_CARD_SUPPORT=y
 CONFIG_SND_I2S1=y
 CONFIG_TYPEC_FSA4480=m
 CONFIG_MOTO_WLC_ALG_SUPPORT=m
