manaus: ov50a af gt9764 bring up[1/3]
manaus:
--ov50a af gt9764 bring up

Change-Id: Ia2c6b0416f4c62dc878765d562b6be75421af356
Signed-off-by: wangzl37 <wangzl37@motorola.com>
Reviewed-on: https://gerrit.mot.com/2547204
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: <chenzm8@motorola.com>
Reviewed-by: <chenlj26@motorola.com>
Reviewed-by: <yangmf3@motorola.com>
Reviewed-by: Zhichao Chen <chenzc2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/cust_mt6879_camera_v4l2_manaus.dtsi
+++ b/arch/arm64/boot/dts/mediatek/cust_mt6879_camera_v4l2_manaus.dtsi
@@ -25,6 +25,11 @@
 
 &mtk_composite_v4l2_2 {
 	port@0 {
+		main_af_endpoint: endpoint {
+			remote-endpoint = <&main_af>;
+		};
+	};
+	port@1 {
 		wide_af_endpoint: endpoint {
 			remote-endpoint = <&wide_af>;
 		};
@@ -51,6 +56,18 @@
 	};
 };
 
+&i2c2 {
+	camera_af_main@18 {
+		compatible = "mediatek,mot_manaus_gt9764";
+		reg = <0x18>;
+		vdd-supply = <&cam_main_afdd_ldo>;
+		port {
+			main_af: endpoint {
+				remote-endpoint = <&main_af_endpoint>;
+			};
+		};
+	};
+};
 
 
 &i2c8 {
