arm/dts: disable aicl and dynamic mivr
As 5V adaptor has been limited by aicl, it load to charGing slowly.
So disable aicl and disable dynamic mivr to fixed on min charger
voltage 4.6V.

Change-Id: Iad86dcc76007d149ed51d2e4264583c59590404c
Signed-off-by: Haijian Ma <mahj8@motorola.com>
Reviewed-on: https://gerrit.mot.com/2547365
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/aion-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/aion-charger.dtsi
@@ -60,7 +60,9 @@
 
 	wireless_factory_max_current = <3000000>;
 	wireless_factory_max_input_current = <600000>;
-	enable_dynamic_mivr;
+
+	disable_aicl;
+
 	/*mmi config*/
 	mmi,iterm-ma = <429>;
 	mmi,mmi-temp-zones = <0 4200 800 0>,
