Revert "(CR): arm/dts: Optimize battery discharge capacity for devonn"
Mot-CRs-fixed:(CR)

This reverts commit c259aabcbfd2ebe25496e086605b75ae2ae0b4b1.

Change-Id: Id22fc938eb7fa37ee4be0887f5488134661d7e59
Reviewed-on: https://gerrit.mot.com/2548993
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Haijian Ma <mahj8@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key
Reviewed-on: https://gerrit.mot.com/2549873
Reviewed-by: Qiang Nie <nieqiang@motorola.com>
Submit-Approved: Qiang Nie <nieqiang@motorola.com>
Tested-by: Qiang Nie <nieqiang@motorola.com>

--- a/arch/arm64/boot/dts/mediatek/devonn-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonn-charger.dtsi
@@ -90,8 +90,8 @@
         CAR_TUNE_VALUE = <(100)>;
         CURR_MEASURE_20A = <(0)>;
         UNIT_MULTIPLE = <(1)>;
-	SHUTDOWN_GAUGE1_XMINS = <(0)>;
-	PSEUDO1_EN = <(0)>;
+	SHUTDOWN_1_TIME = <(10)>;
+	/* If ui_soc shows 1% more than X minites, system will shutdown */
 
 	CHARGER_IEOC = <(243)>;
 	/* battery prop */
