aion: normal mode that don't require vHDR reduce vHDR buffer
details:
only video mode support vHDR, other mode don't need this vHDR buffer,
the condition mtk_cam_feature_is_switchable_hdr is sufficient,so reduce
unnecessary dynamic_exposure_num_max judgement.

Change-Id: I0e273485ed1a03d322944533a0c7c1e72f0c7323
Signed-off-by: guozy16 <guozy16@motorola.com>
Reviewed-on: https://gerrit.mot.com/2549156
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Darong Huang <huangdra@motorola.com>
Reviewed-by: Xu Ji <jixu@motorola.com>
Reviewed-by: Zilong Zhang <zhangzl7@mt.com>
Reviewed-by: Jian Zhang <zhangjo@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-aion.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-aion.config
@@ -79,6 +79,8 @@ CONFIG_MOTO_PE50_CV_LOWER_BOUND_GAP_OFF=y
 #Moto Aion Camera eeprom
 CONFIG_MTK_EEPROM_PROJECT="aion"
 
+CONFIG_MTK_MEMORY_OPTIMIZE=y
+
 # CONFIG_MTK_VOW_DUAL_MIC_SUPPORT is not set
 CONFIG_MTK_VOW_GVA_SUPPORT=y
 CONFIG_MTK_VOW_BARGE_IN_SUPPORT=y
