--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-cancunf.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-cancunf.config
@@ -38,13 +38,20 @@
 # CONFIG_DRM_PANEL_SAMSUNG_OP_CMD is not set
 # CONFIG_DRM_PANEL_SAMSUNG_OP_CMD_MSYNC2 is not set
 # CONFIG_DRM_PANEL_TIANMA_NT37701A_655_FHDP_DPHY_CMD_144HZ is not set
+# CONFIG_DRM_PANEL_TIANMA_NT37701A_655_FHDP_DPHY_CMD_144HZ_RODE is not set
 # CONFIG_DRM_PANEL_CSOT_NT37701A_655_FHDP_DPHY_CMD_144HZ is not set
+# CONFIG_DRM_PANEL_CSOT_NT37701A_655_FHDP_DPHY_CMD_144HZ_V1 is not set
+# CONFIG_DRM_PANEL_BOE_NT37701A_655_FHDP_DPHY_CMD_144HZ is not set
 # CONFIG_DRM_PANEL_K6895V1_64_95T_ALPHA_CMD is not set
 # CONFIG_DRM_PANEL_TIANMA_NT36672C_CPHY_VDO_90HZ_RT4801 is not set
 # CONFIG_DRM_PANEL_TIANMA_ICNL9922_649_FHDP_DPHY_VDO_120HZ is not set
 # CONFIG_DRM_PANEL_TONGXINGDA_FT8726_FHDP_DPHY_VDO_120HZ is not set
+# CONFIG_DRM_PANEL_CSOT_FT8726_FHDP_DPHY_VDO_120HZ is not set
+# CONFIG_DRM_PANEL_CSOT_VTDR6115_655_FHDP_DPHY_VDO_144HZ is not set
+# CONFIG_DRM_PANEL_TIANMA_VTDR6115_655_FHDP_DPHY_VDO_144HZ is not set
+# CONFIG_DRM_PANEL_TIANMA_NT36672C_649_FHDP_DPHY_VDO_120HZ is not set
 
-CONFIG_DRM_PANEL_TIANMA_NT36672C_649_FHDP_DPHY_VDO_120HZ=m
+CONFIG_DRM_PANEL_TM_NT36672C_650_FHDP_DPHY_VDO_120HZ=m
 CONFIG_DRM_PANEL_MOT_DUMMY_VDO_60HZ=m
 CONFIG_OF_GPIO=y
 #enable zram writeback
