thermal: add thermal zone interface for Vsensor
Adding virtual sensor interface in standard thermal
zone class.

Change-Id: Ib56c1a3dd2dff213ea2a358a49101c79694072e5
Reviewed-on: https://gerrit.mot.com/2554277
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Lu Chai <chailu1@motorola.com>
Reviewed-by: Wei Wei <weiweij@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6879-aion-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6879-aion-common-overlay.dtsi
@@ -538,6 +538,11 @@
 	};
 };
 
+&therm_intf {
+	/*Vsensor name should be CASE DIFFERENT with the name in config file*/
+	mmi,temperature-names = "BACK_TEMP";/*for "back_temp" in config file*/
+};
+
 &pio {
 	vibrator_irq_input: vibrator_irq_input {
 		pins_cmd_dat {
