kernel/panel: cancun 2nd csot panel bringup
cancun: 2nd csot panel
add 2nd csot panel files

Change-Id: I468959af3f1bc702495d254574e652f465cf9571
Signed-off-by: hujing3 <hujing3@mt.com>
Reviewed-on: https://gerrit.mot.com/2557969
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Submit-Approved: Jira Key
Tested-by: Jira Key
Reviewed-by: Jianguo Liu <liujg6@motorola.com>
Reviewed-on: https://gerrit.mot.com/2567075
Reviewed-by: Qiong Xie <xieq2@motorola.com>

--- a/drivers/gpu/drm/panel/Kconfig
+++ b/drivers/gpu/drm/panel/Kconfig
@@ -952,6 +952,15 @@ config DRM_PANEL_TM_NT36672C_650_FHDP_DPHY_VDO_120HZ
 	  Say Y here if you want to enable support for TM_NT36672C_650_FHDP_DPHY_VDO_120HZ
 	  panel. It provides a MIPI DSI interface to host.
 
+config DRM_PANEL_CSOT_FT8726_650_FHDP_DPHY_VDO_120HZ
+	tristate "CSOT 1080*2400 120 HZ VDO ft8726 panel"
+	depends on OF
+	depends on DRM_MIPI_DSI
+	depends on BACKLIGHT_CLASS_DEVICE
+	default n
+	help
+	  Say Y here if you want to enable support for DRM_PANEL_CSOT_FT8726_650_FHDP_DPHY_VDO_120HZ
+	  panel. It provides a MIPI DSI interface to host.
 
 config DRM_MEDIATEK_PANEL
 	tristate "drm panel common driver"
