--- a/arch/arm64/boot/dts/mediatek/cancunf-touch.dtsi
+++ b/arch/arm64/boot/dts/mediatek/cancunf-touch.dtsi
@@ -11,7 +11,7 @@
 	#size-cells = <0>;
 
 	touch@0{
-		compatible = "novatek,NVT-ts-spi";
+		compatible = "novatek,NVT-ts-spi","focaltech,fts";
 		reg = <0>; //Same as CS ID
 		status = "ok";
 
@@ -29,6 +29,14 @@
 		// 672A, 525B, 675, 526, 672C, 523
 		novatek,swrst-n8-addr = <0x03F0FE>;
 		novatek,spi-rd-fast-addr = <0x03F310>;
+
+		//FTS
+		focaltech,reset-gpio = <&pio 3 0x0>;
+		focaltech,irq-gpio = <&pio 22 0x0>;
+		focaltech,max-touch-number = <10>;
+		focaltech,display-coords = <0 0 1080 2400>;
+		focaltech,report_gesture_key = <59>;
+		focaltech,panel-supplier = "csot";
 
 	};
 };
