cancunf: kernel: RF SWTP bringup
Integrate ODM changes for RF SWTP bringup,
https://gerrit-cn.motorola.com/38050 EKCANCUNF-19 RF SWTP air interface detect[1/3]
https://gerrit-cn.motorola.com/38051 EKCANCUNF-19 RF SWTP air interface detect[2/3]
https://gerrit-cn.motorola.com/38052 EKCANCUNF-19 RF SWTP air interface detect[3/3]
https://gerrit-cn.motorola.com/38055 EKCANCUNF-18 RF SIM hot swap[1/2], SWTP changes
https://gerrit-cn.motorola.com/38056 EKCANCUNF-18 RF SIM hot swap[2/2], SWTP changes

Change-Id: Ib98c78a714ec68d2dd0e6d7ea0ddc683ec787ef0
Reviewed-on: https://gerrit.mot.com/2558060
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Submit-Approved: Jira Key
Tested-by: Jira Key
Reviewed-by: Shuxian Zhang <zhangsx1@motorola.com>
Reviewed-by: Geoffrey Lu <lubm1@motorola.com>
(cherry picked from commit 5625261b952c2f8843a2dc8e634ac5d8daef5760)
Reviewed-on: https://gerrit.mot.com/2572043

--- a/drivers/misc/mediatek/eccci/Kconfig
+++ b/drivers/misc/mediatek/eccci/Kconfig
@@ -98,6 +98,15 @@ config MOTO_AION_SWTP_CUST
 	  it is disabled.
 	  The option default disabled.
 
+config MOTO_CANCUNF_SWTP_CUST
+	bool "ECCCI cancunf swtp customization"
+	depends on MTK_ECCCI_DRIVER
+	help
+	  This option enables cancunf swtp customization, if yes,
+	  then it is supported, if no,
+	  it is disabled.
+	  The option default disabled.
+
 config MOTO_BYPSS_RF_CABLE_DETECT_SUPPORT
 	bool "ECCCI by pass rfcable detection"
 	depends on MTK_ECCCI_DRIVER
