kernel/dts: cancun 2nd csot_ft panel bringup
cancun 2nd csot_ft8726s panel
2nd panel dts configs

Change-Id: I0a83a9ff123ad0cfe78150283e151739228bf41e
Reviewed-on: https://gerrit.mot.com/2558439
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Submit-Approved: Jira Key
Tested-by: Jira Key
Reviewed-by: Jing Hu <hujing3@mt.com>
Reviewed-on: https://gerrit.mot.com/2567079
Reviewed-by: Qiong Xie <xieq2@motorola.com>

--- a/arch/arm64/boot/dts/mediatek/cancunf-display.dtsi
+++ b/arch/arm64/boot/dts/mediatek/cancunf-display.dtsi
@@ -181,6 +181,21 @@
 
 	};
 
+	panel3@0 {
+                compatible = "csot_ft8726,vid,120hz";
+                reg = <2>;
+                reset-gpios = <&pio 95 0>;
+                bias_n-gpios = <&pio 134 0>;
+                bias_p-gpios = <&pio 182 0>;
+                pinctrl-names = "default";
+                port {
+                        panel_in3: endpoint {
+                                remote-endpoint = <&dsi_out>;
+                        };
+                };
+
+        };
+
 	ports {
 		port {
 			dsi_out: endpoint {
