--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-cancunf.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-cancunf.config
@@ -52,6 +52,7 @@
 # CONFIG_DRM_PANEL_TIANMA_NT36672C_649_FHDP_DPHY_VDO_120HZ is not set
 
 CONFIG_DRM_PANEL_TM_NT36672C_650_FHDP_DPHY_VDO_120HZ=m
+CONFIG_DRM_PANEL_CSOT_FT8726_650_FHDP_DPHY_VDO_120HZ=m
 CONFIG_DRM_PANEL_MOT_DUMMY_VDO_60HZ=m
 CONFIG_OF_GPIO=y
 #enable zram writeback
