charge: reduce max rp current to cover high R-cable
As PPS charger with high R-cable and unit reboot, unit detect type-c
Rp 3A firstly before detected PD type. So ICL set 3A first and then
handle PD detected process, but now as high icl effect CC signal,
so PD communicate error.

Change-Id: I88e1565466ef17fc3d207ed868bbe56e81b21c68
Signed-off-by: Haijian Ma <mahj8@motorola.com>
Reviewed-on: https://gerrit.mot.com/2558575
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Lu Chai <chailu1@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/aion-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/aion-charger.dtsi
@@ -64,6 +64,7 @@
 	disable_aicl;
 
 	/*mmi config*/
+	mmi,typec-rp-max-current = <2000000>;
 	mmi,iterm-ma = <461>;
 	mmi,mmi-temp-zones = <0 4200 800 0>,
 			<10 4250 4000 2000>,
