--- a/arch/arm64/boot/dts/mediatek/mt6879-manaus-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6879-manaus-common-overlay.dtsi
@@ -131,11 +131,20 @@
 &spi1 {
 	status = "okay";
 	tee-only;
+	mediatek,pad-select =  <0>, <1>;
 	fingerprint@0 {
 		compatible = "mediatek,fingerprint";
 		reg = <0>;
 		spi-max-frequency = <8000000>;
 		status = "okay";
+	};
+
+	goodix_tee@0 {
+		status = "okay";
+		compatible = "goodix,goodix-fp";
+		reg = <1>;
+		spi-max-frequency = <8000000>;
+		netlink-event = <30>;
 	};
 };
 
@@ -146,7 +155,6 @@
 		interrupts = <24 IRQ_TYPE_EDGE_RISING 24 0>;
 
 		fp-ctrl-power;
-
 		egistec,gpio_reset = <&pio 7 0x0>;
 		egistec,gpio_irq = <&pio 24 0x0>;
 
@@ -160,10 +168,23 @@
 		pinctrl-2 = <&fingerfp_irq_active>;
 		pinctrl-3 = <&fingerfp_spi_active>;
 		pinctrl-4 = <&fingerfp_spi_default>;
-
 		status="okay";
 	};
 
+	goodix_fp:goodix_fp{
+		compatible = "mediatek,fingerprint-goodix";
+		interrupt-parent = <&pio>;
+		interrupts = <24 IRQ_TYPE_EDGE_RISING 24 0>;
+		rgltr-ctrl-support;
+		fp,vdd-supply = <&mt6368_vfp>;
+		fp,voltage-range = <3300000 3300000>;
+		pinctrl-names = "fingerprint_irq", "fingerprint_reset_high", "fingerprint_reset_low";
+		pinctrl-0 = <&fingerfp_irq_active>;
+		pinctrl-1 = <&fingerfp_rst_high>;
+		pinctrl-2 = <&fingerfp_rst_low>;
+		int-gpios = <&pio 24 0>;
+		status = "okay";
+	};
 
 	charge_led {
 		label = "red";
