--- a/arch/arm64/configs/ext_config/debug-mgk_64_k510-aion.config
+++ b/arch/arm64/configs/ext_config/debug-mgk_64_k510-aion.config
@@ -22,3 +22,6 @@ CONFIG_MTK_TEE_GP_SUPPORT=y
 CONFIG_MTK_SVP_ON_MTEE_SUPPORT=y
 CONFIG_MOTO_BYPSS_RF_CABLE_DETECT_SUPPORT=y
 # CONFIG_GAUGE_MT6375 is not set
+
+# Enable MKP test on debug builds.
+CONFIG_MTK_MKP_TEST=m
