--- a/arch/arm64/boot/dts/mediatek/mt6879-moto-base.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6879-moto-base.dtsi
@@ -9,6 +9,7 @@
 	hw: hw { };
 	tboard_thermistor4: thermal-ntc4 { };
 	tboard_thermistor5: thermal-ntc5 { };
+	tboard_thermistor6: thermal-ntc6 { };
 	moto_chg_tcmd: moto_chg_tcmd { };
 	smart_pen_charger: mmi,pen-charger { };
 	moto_wlc: moto_wlc { };
