Add device tree for Samsung NFC on cancunf
Device tree
Add nfc node

Change-Id: I6e0e5d7e14d386953e97a501045984afd85bffa7
Signed-off-by: panzh2 <panzh2@mt.com>
Reviewed-on: https://gerrit.mot.com/2561252
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Submit-Approved: Jira Key
Tested-by: Jira Key
Reviewed-by: Jianguo Liu <liujg6@motorola.com>
Reviewed-on: https://gerrit.mot.com/2570628
Reviewed-by: Shengchun Li <lisc2@motorola.com>

--- a/arch/arm64/boot/dts/mediatek/mt6855-cancunf-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855-cancunf-common-overlay.dtsi
@@ -35,18 +35,20 @@
         mediatek,xo-bbck4 = <1>;
 };
 
+
+
 &i2c3 {
-        status = "okay";
-        nfc_pn5xx: nfc_pn5xx@28 {
-                compatible = "nxp,pn5xx";
-                reg = <0x28>;
-                interrupt-parent = <&pio>;
-                interrupts = <19 IRQ_TYPE_LEVEL_HIGH>;
-                nxp,pn544-irq = <&pio 2 0>;
-                nxp,pn544-ven = <&pio 161 0>;
-                nxp,pn544-fd = <&pio 1 0>;
-                status = "okay";
-        };
+     sec-nfc@27 {
+		compatible = "sec-nfc";
+		reg = <0x27>;
+		
+		sec-nfc,ven-gpio = <&pio 161 0>;
+		sec-nfc,firm-gpio = <&pio 1 0>;
+		sec-nfc,irq-gpio = <&pio 2 0>;
+		sec-nfc,clk_req-gpio = <&pio 160 0>;
+		
+		status = "okay";
+	};
 };
 
 &dispsys_config {
