kernel/dts: cancun 3rd panel display driver bringup
cancun: 3rd txd_ili7807s panel
3rd panel dts configs

Change-Id: I4af2d60014e30214d28a2aa666a3e842dab3f485
Reviewed-on: https://gerrit.mot.com/2562620
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Submit-Approved: Jira Key
Tested-by: Jira Key
Reviewed-by: Jing Hu <hujing3@mt.com>
(cherry picked from commit 16bab6690f29bdae7b335bee70c9e02d7c289e76)
Reviewed-on: https://gerrit.mot.com/2568833
Reviewed-by: Qiong Xie <xieq2@motorola.com>

--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-cancunf.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-cancunf.config
@@ -53,6 +53,7 @@
 
 CONFIG_DRM_PANEL_TM_NT36672C_650_FHDP_DPHY_VDO_120HZ=m
 CONFIG_DRM_PANEL_CSOT_FT8726_650_FHDP_DPHY_VDO_120HZ=m
+CONFIG_DRM_PANEL_TXD_ILI7807S_650_FHDP_DPHY_VDO_120HZ=m
 CONFIG_DRM_PANEL_MOT_DUMMY_VDO_60HZ=m
 CONFIG_OF_GPIO=y
 #enable zram writeback
