--- a/arch/arm64/boot/dts/mediatek/cancunf-display.dtsi
+++ b/arch/arm64/boot/dts/mediatek/cancunf-display.dtsi
@@ -196,6 +196,21 @@
 
         };
 
+	panel4@0 {
+                compatible = "txd,ili7807s,vdo,120hz";
+                reg = <3>;
+                reset-gpios = <&pio 95 0>;
+                bias_n-gpios = <&pio 134 0>;
+                bias_p-gpios = <&pio 182 0>;
+                pinctrl-names = "default";
+                port {
+                        panel_in4: endpoint {
+                                remote-endpoint = <&dsi_out>;
+                        };
+                };
+
+        };
+
 	ports {
 		port {
 			dsi_out: endpoint {
