--- a/arch/arm64/boot/dts/mediatek/cancunf-touch.dtsi
+++ b/arch/arm64/boot/dts/mediatek/cancunf-touch.dtsi
@@ -11,7 +11,7 @@
 	#size-cells = <0>;
 
 	touch@0{
-		compatible = "novatek,NVT-ts-spi","focaltech,fts";
+		compatible = "novatek,NVT-ts-spi","focaltech,fts", "tchip,ilitek";
 		reg = <0>; //Same as CS ID
 		status = "ok";
 
@@ -37,6 +37,10 @@
 		focaltech,display-coords = <0 0 1080 2400>;
 		focaltech,report_gesture_key = <59>;
 		focaltech,panel-supplier = "csot";
+
+		//ilitek
+		touch,reset-gpio = <&pio 3 0x0>;
+		touch,irq-gpio = <&pio 22 0x0>;
 
 	};
 };
