arm64/configs: revert moto changes from mgk_64_k510_defconfig
Moto changes should not be merged into mgk_64_k510_defconfig.
Those configs will affect all other products based on kernel-5.10.
Move CONFIG_MTK_VIDEO_LM3643 to moto-mgk_64_k510.config and
revert all Moto changes from mgk_64_k510_defconfig.

This change depends on below changes, otherwise it will break build of
aion and manaus.
1. aion/manaus - Display
https://gerrit.mot.com/#/q/(CR)
2. aion - Camera
https://gerrit.mot.com/#/c/2570678/
3. manaus - Camera
https://gerrit.mot.com/#/c/2570837/

Change-Id: I4107f8a527e849adc4ec3c7399c4b2b179dfbd08
Reviewed-on: https://gerrit.mot.com/2576791
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Minghui Wei <weimh1@motorola.com>
Reviewed-by: Qiong Xie <xieq2@motorola.com>
Reviewed-by: Xiaojun Ji <jixj@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510.config
@@ -25,3 +25,11 @@ CONFIG_MOTO_CCCI_SEC_SUPPORT=y
 
 # Set modem to Lf/Lt/W/G mode
 CONFIG_MTK_MD1_SUPPORT=9
+
+#
+# Vicky camera bringup added related changes into mgk_64_k510_defconfig unexpectedly
+# and removed CONFIG_MTK_VIDEO_LM3643 from mgk_64_k510_defconfig directly.
+# Since we should NOT do any changes in MTK mgk_64_k510_defconfig, so we override
+# the CONFIG_MTK_VIDEO_LM3643 here and revert mgk_64_k510_defconfig to MTK default.
+#
+# CONFIG_MTK_VIDEO_LM3643 is not set
