asoc: add HAC sgm3715
changes:
add HAC sgm3715

Change-Id: I421292f15662b290f598b8ea078fa7d7f393faba
Reviewed-on: https://gerrit.mot.com/2565574
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Submit-Approved: Jira Key
Tested-by: Jira Key
Reviewed-by: Yunfei Guo <guoyf2@motorola.com>
(cherry picked from commit b92f7739e42e1737acaeb0ac4625de5388305e6f)
Reviewed-on: https://gerrit.mot.com/2568948
Reviewed-by: Qiong Xie <xieq2@motorola.com>

--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-cancunf.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-cancunf.config
@@ -68,6 +68,8 @@ CONFIG_HQ_CAMERA_LDO=m
 # CONFIG_SND_SMARTPA_AW883XX_I2S3 is not set
 # CONFIG_SND_SMARTPA_AW882XX is not set
 # CONFIG_SND_I2S1 is not set
+#Add for HAC
+CONFIG_MTK_HAC_SGM3715_SUPPORT=y
 CONFIG_TYPEC_FSA4480=m
 CONFIG_MOTO_WLC_ALG_SUPPORT=m
 CONFIG_MOTO_CHG_TCMD_SUPPORT=m
