--- a/arch/arm64/boot/dts/mediatek/cancunf-audio.dtsi
+++ b/arch/arm64/boot/dts/mediatek/cancunf-audio.dtsi
@@ -38,3 +38,63 @@
 		status = "okay";
 	};
 };
+
+&pio {
+	aud_pins_hacamp_high: aud_pins_hacamp_high {
+		pins_cmd_dat {
+			pinmux = <PINMUX_GPIO158__FUNC_GPIO158>;
+			slew-rate = <1>;
+			output-high;
+		};
+	};
+	aud_pins_hacamp_low: aud_pins_hacamp_low {
+		pins_cmd_dat {
+			pinmux = <PINMUX_GPIO158__FUNC_GPIO158>;
+			slew-rate = <1>;
+			output-low;
+		};
+	};
+};
+
+&afe {
+	pinctrl-names = "aud_clk_mosi_off",
+			"aud_clk_mosi_on",
+			"aud_dat_mosi_off",
+			"aud_dat_mosi_on",
+			"aud_dat_miso0_off",
+			"aud_dat_miso0_on",
+			"aud_dat_miso1_off",
+			"aud_dat_miso1_on",
+			"aud_dat_miso2_off",
+			"aud_dat_miso2_on",
+			"vow_dat_miso_off",
+			"vow_dat_miso_on",
+			"vow_clk_miso_off",
+			"vow_clk_miso_on",
+			"aud_gpio_i2s0_off",
+			"aud_gpio_i2s0_on",
+			"aud_gpio_i2s3_off",
+			"aud_gpio_i2s3_on",
+			"hacamp_pullhigh",
+			"hacamp_pulllow";
+	pinctrl-0 = <&aud_clk_mosi_off>;
+	pinctrl-1 = <&aud_clk_mosi_on>;
+	pinctrl-2 = <&aud_dat_mosi_off>;
+	pinctrl-3 = <&aud_dat_mosi_on>;
+	pinctrl-4 = <&aud_dat_miso0_off>;
+	pinctrl-5 = <&aud_dat_miso0_on>;
+	pinctrl-6 = <&aud_dat_miso1_off>;
+	pinctrl-7 = <&aud_dat_miso1_on>;
+	pinctrl-8 = <&aud_dat_miso2_off>;
+	pinctrl-9 = <&aud_dat_miso2_on>;
+	pinctrl-10 = <&vow_dat_miso_off>;
+	pinctrl-11 = <&vow_dat_miso_on>;
+	pinctrl-12 = <&vow_clk_miso_off>;
+	pinctrl-13 = <&vow_clk_miso_on>;
+	pinctrl-14 = <&aud_gpio_i2s0_off>;
+	pinctrl-15 = <&aud_gpio_i2s0_on>;
+	pinctrl-16 = <&aud_gpio_i2s3_off>;
+	pinctrl-17 = <&aud_gpio_i2s3_on>;
+	pinctrl-18 = <&aud_pins_hacamp_high>;
+	pinctrl-19 = <&aud_pins_hacamp_low>;
+};
