--- a/drivers/gpu/drm/panel/Kconfig
+++ b/drivers/gpu/drm/panel/Kconfig
@@ -899,6 +899,7 @@ config DRM_PANEL_TIANMA_ICNL9922_649_FHDP_DPHY_VDO_120HZ
 	depends on OF
 	depends on DRM_MIPI_DSI
 	depends on BACKLIGHT_CLASS_DEVICE
+	default n
 	help
 	  Say Y here if you want to enable support for TIANMA_ICNL9922_649_FHDP_DPHY_VDO_120HZ
 	  panel. It provides a MIPI DSI interface to host.
@@ -908,6 +909,7 @@ config DRM_PANEL_TONGXINGDA_FT8726_FHDP_DPHY_VDO_120HZ
 	depends on OF
 	depends on DRM_MIPI_DSI
 	depends on BACKLIGHT_CLASS_DEVICE
+	default n
 	help
 	  Say Y here if you want to enable support for DRM_PANEL_TONGXINGDA_FT8726_FHDP_DPHY_VDO_120HZ
 	  panel. It provides a MIPI DSI interface to host.
@@ -917,6 +919,7 @@ config DRM_PANEL_CSOT_FT8726_FHDP_DPHY_VDO_120HZ
 	depends on OF
 	depends on DRM_MIPI_DSI
 	depends on BACKLIGHT_CLASS_DEVICE
+	default n
 	help
 	  Say Y here if you want to enable support for DRM_PANEL_CSOT_FT8726_FHDP_DPHY_VDO_120HZ
 	  panel. It provides a MIPI DSI interface to host.
@@ -926,6 +929,7 @@ config DRM_PANEL_TIANMA_VTDR6115_655_FHDP_DPHY_VDO_144HZ
 	depends on OF
 	depends on DRM_MIPI_DSI
 	depends on BACKLIGHT_CLASS_DEVICE
+	default n
 	help
 	  Say Y here if you want to enable support for TIANMA VTDR6115 DSC
 	  DPHY cmd mode Full HD Plus 144HZ panel. The panel has a 1080x2400
@@ -937,6 +941,7 @@ config DRM_PANEL_CSOT_VTDR6115_655_FHDP_DPHY_VDO_144HZ
 	depends on OF
 	depends on DRM_MIPI_DSI
 	depends on BACKLIGHT_CLASS_DEVICE
+	default n
 	help
 	  Say Y here if you want to enable support for CSOT VTDR6115 DSC
 	  DPHY cmd mode Full HD Plus 144HZ panel. The panel has a 1080x2400
