--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-manaus.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-manaus.config
@@ -34,6 +34,15 @@
 # CONFIG_DRM_PANEL_SAMSUNG_ANA6705_CMD is not set
 # CONFIG_DRM_PANEL_SAMSUNG_OP_CMD is not set
 # CONFIG_DRM_PANEL_SAMSUNG_OP_CMD_MSYNC2 is not set
+# CONFIG_DRM_PANEL_SAMSUNG_ANA6705_CMD_FHDP is not set
+# CONFIG_DRM_PANEL_K6895V1_64_95T_ALPHA_CMD is not set
+# CONFIG_DRM_PANEL_TIANMA_R66451_CMD_120HZ_WA is not set
+# CONFIG_DRM_PANEL_TIANMA_NT36672C_CPHY_VDO_90HZ_RT4801 is not set
+# CONFIG_DRM_PANEL_TIANMA_NT37701A_DPHY_CMD_144HZ is not set
+# CONFIG_DRM_PANEL_CSOT_NT37701A_655_FHDP_DPHY_CMD_144HZ is not set
+# CONFIG_DRM_PANEL_ALPHA_SAMSUNG_S6E3HAE_CMD_120HZ is not set
+
+
 CONFIG_DRM_PANEL_CSOT_VTDR6115_655_FHDP_DPHY_VDO_144HZ=m
 CONFIG_DRM_PANEL_TIANMA_VTDR6115_655_FHDP_DPHY_VDO_144HZ=m
 CONFIG_DRM_PANEL_MOT_DUMMY_VDO_60HZ=m
