arm/dtsi: cancunf: usb eye
usb eye config
modify usb phy tuning eye-vrt/eye-term/rev6/discth to 7/3/3/0xf

Change-Id: Ifdeb62f00d2737278afaf82188703119ff45f7ce
Signed-off-by: shenying2 <shenying2@mt.com>
Reviewed-on: https://gerrit.mot.com/2569324
Reviewed-by: Ying Shen <shenying@motorola.com>
SLTApproved: Ying Shen <shenying@motorola.com>
Submit-Approved: Ying Shen <shenying@motorola.com>
Tested-by: Ying Shen <shenying@motorola.com>
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Submit-Approved: Jira Key
Tested-by: Jira Key
Reviewed-by: Yifan Xu <xuyf4@motorola.com>
Reviewed-on: https://gerrit.mot.com/2569900
Reviewed-by: Qiong Xie <xieq2@motorola.com>

--- a/arch/arm64/boot/dts/mediatek/mt6855-cancunf-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855-cancunf-common-overlay.dtsi
@@ -299,8 +299,9 @@ chipone,enable-wakeup;
 
 &u2port0{
 	mediatek,eye-vrt = <7>;
-	mediatek,eye-term = <6>;
-	mediatek,rev6 = <2>;
+	mediatek,eye-term = <3>;
+	mediatek,rev6 = <3>;
+	mediatek,discth = <0xf>;
 };
 
 
