charge: add charger power uevent
For showing turbo charGing UI, add charger power
uevent to upper

Change-Id: Ic54345fbef4b111b1bb4905d341fd79e7c539ac4
Signed-off-by: Haijian Ma <mahj8@motorola.com>
Reviewed-on: https://gerrit.mot.com/2569527
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/aion-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/aion-charger.dtsi
@@ -89,6 +89,10 @@
 	mmi,mux_wls_boost_en = <&pio 121 0x0>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&mmi_mux_wls_default>;
+
+	mmi,pd-pmax-mw = <68000>;
+	mmi,pd_vbus_low_bound = <5000000>;
+	mmi,pd_vbus_upper_bound = <9000000>;
 };
 
 &moto_chg_tcmd {
